samples/_failures_safe/1761268659_5f07bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27438438.c: In function ‘main’:
./samples/SAFE/__tmp_27438438.c:142:9: error: expected expression at end of input
  142 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_27438438.c:142:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_27438438.c:142:9: error: expected declaration or statement at end of input
